refactor(papers): improve pedagogy section clarity and tone
- Move lateralization footnote after "right-brain" mention (both versions)
- Add hyperref package to English version for footnote links
- Replace "pohodlí" with "zvládnutí" for better Czech phrasing
- Soften barrier statement: "is" → "may be", "courage" → "reluctance"
- Improve "Call to Action" section:
  - Czech: "nabízíme následující" with periods (grammatically correct)
  - English: "we suggest the following" without periods (standard style)

--- a/docs/papers/primal-forest-paper-cs.tex
+++ b/docs/papers/primal-forest-paper-cs.tex
@@ -274,9 +274,9 @@ Proto geometrický pohled, navzdory své jasnosti, nenabízí výpočetní zjedn
 
 \subsection{Proč se to neučí ve školách?}
 
-Matematické vzdělávání tradičně upřednostňuje algoritmické postupy před vizuálním porozuměním. Eratosthenovo síto je typickým příkladem: přestože je základem výuky prvočísel, je téměř univerzálně prezentováno jako \emph{lineární, sekvenční algoritmus}: vypište čísla 2, 3, 4, 5, \ldots na řádek, pak systematicky škrtejte násobky. Tento přístup zapojuje \textbf{sekvenční zpracování levou hemisférou}\footnote{Poznámka: Rozdělení na "levou analytickou" a "pravou kreativní" hemisféru je zjednodušený populárně-naučný model. V realitě obě hemisféry intenzivně spolupracují na většině kognitivních úkolů. Jde zde o pedagogickou metaforu. Viz \href{https://cs.wikipedia.org/wiki/Lateralizace_mozku}{cs.wikipedia.org}}---krok 1, krok 2, následujte postup, dojděte k odpovědi.
+Matematické vzdělávání tradičně upřednostňuje algoritmické postupy před vizuálním porozuměním. Eratosthenovo síto je typickým příkladem: přestože je základem výuky prvočísel, je téměř univerzálně prezentováno jako \emph{lineární, sekvenční algoritmus}: vypište čísla 2, 3, 4, 5, \ldots na řádek, pak systematicky škrtejte násobky. Tento přístup zapojuje \textbf{sekvenční zpracování levou hemisférou}---krok 1, krok 2, následujte postup, dojděte k odpovědi.
 
-Prvoles nabízí něco zásadně odlišného: \textbf{prostorové vnímání pravou hemisférou}, kde je celá struktura viditelná najednou. Místo ``vyškrtněte další složené číslo'' studenti vidí ``složená čísla tvoří pravidelnou mřížku; prvočísla jsou mezery.''
+Prvoles nabízí něco zásadně odlišného: \textbf{prostorové vnímání pravou hemisférou}\footnote{Poznámka: Rozdělení na "levou analytickou" a "pravou kreativní" hemisféru je zjednodušený populárně-naučný model. V realitě obě hemisféry intenzivně spolupracují na většině kognitivních úkolů. Jde zde o pedagogickou metaforu. Viz \href{https://cs.wikipedia.org/wiki/Lateralizace_mozku}{cs.wikipedia.org}}, kde je celá struktura viditelná najednou. Místo ``vyškrtněte další složené číslo'' studenti vidí ``složená čísla tvoří pravidelnou mřížku; prvočísla jsou mezery.''
 
 Proč geometrické vizualizace prvočísel zůstávají raritou ve výuce? S moderními výpočetními nástroji---GeoGebra, Python, Wolfram, interaktivní notebooky---je jejich vytváření a zkoumání triviální. Ulamova spirála existuje od roku 1963, přesto se neučí. Proč vzdělávání setrvává u lineárního algoritmu?
 
@@ -290,7 +290,7 @@ Síto se tradičně učí jako \emph{algoritmus}---metoda pro efektivní výpoč
 Lineární algoritmy je snadné testovat: ``Vyškrtal student správná čísla? Identifikoval všechna prvočísla do 100?'' Prostorové porozumění je těžší hodnotit: ``Rozpoznává student, proč se tvoří mezery? Dokáže vysvětlit vzorec geometricky?'' Tradiční testování upřednostňuje procedurální úkoly.
 
 \paragraph{Příprava učitelů}
-Většina učitelů matematiky se sama naučila lineární síto a možná se nikdy nesetkala s geometrickými alternativami. Vyučování toho, co znáte, udržuje algoritmickou tradici. Zavedení nových vizualizací vyžaduje profesní rozvoj, aktualizované materiály a pohodlí s výpočetními nástroji.
+Většina učitelů matematiky se sama naučila lineární síto a možná se nikdy nesetkala s geometrickými alternativami. Vyučování toho, co znáte, udržuje algoritmickou tradici. Zavedení nových vizualizací vyžaduje profesní rozvoj, aktualizované materiály a zvládnutí výpočetních nástrojů.
 
 \subsection{Vzdělávací příležitost}
 
@@ -341,17 +341,17 @@ S moderními výpočetními nástroji---Wolfram Language, Python s matplotlib, G
 \item Objevovat další vzory sami
 \end{itemize}
 
-Bariéra už není technologie. Bariérou je nedostatek \emph{povědomí}, že takové vizualizace existují, a \emph{odvahy} odchýlit se od tradičního učebního plánu.
+Bariéra už není technologie. Bariérou může být nedostatek povědomí, že takové vizualizace existují, či nechuť odchýlit se od tradičního učebního plánu.
 
 \subsection{Výzva k akci}
 
-Pokud jste pedagog a čtete toto, zvažte:
+Pokud jste pedagog a čtete toto, nabízíme následující:
 \begin{itemize}
-\item Zkuste ukázat Prvoles jako doplněk algoritmického síta
-\item Zeptejte se žáků a studentů, který pohled jim dává větší smysl
-\item Použijte vizualizace k odpovědi na otázky ``proč'' o rozložení prvočísel
-\item Povzbuďte žáky a studenty ke zkoušení variací a k vlastním objevům
-\item Sdílejte s kolegy funkční přístupy a podílejte se na tvorbě učebních plánů
+\item Zkuste ukázat Prvoles jako doplněk algoritmického síta.
+\item Zeptejte se žáků a studentů, který pohled jim dává větší smysl.
+\item Použijte vizualizace k odpovědi na otázky ``proč'' o rozložení prvočísel.
+\item Povzbuďte žáky a studenty ke zkoušení variací a k vlastním objevům.
+\item Sdílejte s kolegy funkční přístupy a podílejte se na tvorbě učebních plánů.
 \end{itemize}
 
 Cílem není přidat další téma do již přeplněného učebního plánu. Cílem je prohloubit porozumění důležitému tématu v souvislostech, zapojením jak algoritmického tak prostorového myšlení.
