fix: correct author name Jan Pospíšil → Jan Popelka
Fixed author name in all files:
- docs/papers/zero-free-lemma.tex
- docs/active/phd-roadmap-v2.md
- docs/WOLFRAM_BUSINESS_CASE.md
- README.md (author and citation)

Note: We hurried to finish before midnight (pospíšili jsme si :)

--- a/docs/papers/zero-free-lemma.tex
+++ b/docs/papers/zero-free-lemma.tex
@@ -6,7 +6,7 @@
 \newtheorem{corollary}{Corollary}
 
 \title{Zero-Free Region for Regularized Global Function $G(s,\alpha,\varepsilon)$}
-\author{Jan Pospíšil \and Claude (Anthropic)}
+\author{Jan Popelka \and Claude (Anthropic)}
 \date{November 15, 2025 --- Draft}
 
 \begin{document}
